fix: align home page texts

--- a/src/components/Home/HomeHeader/HomeHeader.styles.scss
+++ b/src/components/Home/HomeHeader/HomeHeader.styles.scss
@@ -122,7 +122,6 @@
   .chazz-title,
   .chazz-title-out {
     width: 50%;
-    left: 3%;
     top: 55%;
 
     h1 {
@@ -195,7 +194,6 @@
     .chazz-title,
     .chazz-title-out {
       top: 50%;
-      left: 3%;
     }
   }
 }
