--- a/src/components/Home/HomeSections/3-partners/Partners.styles.scss
+++ b/src/components/Home/HomeSections/3-partners/Partners.styles.scss
@@ -1,4 +1,8 @@
 // MOBILE FIRST
+#Partners {
+  width: 90%;
+  margin: auto;
+}
 
 .partner-section {
   background-color: var(--white);
