--- a/src/components/shared/Footer/CompanyInfo/CompanyInfo.styles.scss
+++ b/src/components/shared/Footer/CompanyInfo/CompanyInfo.styles.scss
@@ -2,6 +2,11 @@
 
 // MOBILE FIRST
 
+#Footer {
+  width: 90%;
+  margin: auto;
+}
+
 .we-are-section {
   background-color: var(--black);
   color: var(--white);
